# b-cc

./: .gitignore  .travis.yml  .vimrc  Answer.c  Answer.h  BuildContext.c  BuildContext.h  BuildDatabase.h  CMakeLists.txt  Database.h  DatabaseInMemory.cc  DatabaseInMemory.h  Example.c  Exception.c  Exception.h  FileQuestion.c  FileQuestion.h  FileRule.c  FileRule.h  Makefile  Nicobuild  PATTERNS.md  Portable.c  Question.c  Question.h  Rule.c  Rule.h  RuleMap.h  RuleQueryList.c  RuleQueryList.h  UUID.c  UUID.h  configure.make  nicobuild.mk  valgrind.supp
Bindings/Python/: CMakeLists.txt
Bindings/Python/Examples/JoinFiles/: CMakeLists.txt
Bindings/Python/Examples/JoinFiles/Source/: JoinFiles.py
Bindings/Python/Examples/SelfCompile/: CMakeLists.txt
Bindings/Python/Examples/SelfCompile/Source/: SelfCompile.py  SelfCompileTwisted.py
Bindings/Python/PrivateHeaders/B/Py/Private/: Answer.h  AnswerContext.h  AnswerFuture.h  Database.h  FileQuestion.h  Main.h  Process.h  Question.h  QuestionVTable.h  RunLoop.h  Serialize.h  Util.h
Bindings/Python/Source/: Answer.c  AnswerContext.c  AnswerFuture.c  Database.c  FileQuestion.c  Main.c  Module.c  Process.c  Question.c  QuestionVTable.c  RunLoop.c  RunLoopNative.c  Serialize.c  Util.c
Bindings/Python/Source/b/: twisted.py
Bindings/Python/Tests/: TestDatabase.py  TestFileQuestion.py  TestMain.py  TestProcess.py  TestPythonFileQuestion.py  TestRunLoop.py
CMake/: CMakeLists.txt  b_copy_file.cmake  b_disable_gcc_warnings.cmake  b_python.cmake
Examples/JoinFiles/: CMakeLists.txt
Examples/JoinFiles/Source/: Main.c
Examples/JoinFiles/Tests/: TestJoinFiles.py
Examples/SelfCompile/: CMakeLists.txt
Examples/SelfCompile/Source/: Main.c
Examples/SelfCompile/Tests/: TestSelfCompile.py
Headers/B/: AnswerContext.h  AnswerFuture.h  Attributes.h  Database.h  Error.h  FileQuestion.h  Main.h  Memory.h  Process.h  QuestionAnswer.h  RunLoop.h  Serialize.h  UUID.h
PrivateHeaders/B/Private/: AnswerContext.h  AnswerFuture.h  Assertions.h  Callback.h  Config.h  Database.h  Log.h  Main.h  Math.h  Memory.h  Mutex.h  Queue.h  RunLoop.h  RunLoopUtil.h  SQLite3.h
Source/: AnswerContext.c  AnswerFuture.c  Assertions.c  Database.c  FileQuestion.c  Main.c  Memory.c  Mutex.c  Process.c  QuestionAnswer.c  RunLoop.c  RunLoopKqueue.c  RunLoopPlain.c  RunLoopSigchld.c  RunLoopUtil.c  SQLite3.c  Serialize.c  UUID.c
Test/PrivateUnit/: TestAnswerFuture.cc
Test/Unit/: CMakeLists.txt  TestSerialize.cc
Test/gtest/: TestSerialize.cc
Tests/PrivateUnit/: CMakeLists.txt  Executable.h  TestAnswerFuture.cc  TestProcess.cc  TestProcessChild.c  TestRunLoop.cc
Tests/Unit/: CMakeLists.txt  TemporaryDirectory.h  TestAnswerFuture.cc  TestFileQuestion.cc  TestRunLoop.cc  TestSerialize.cc  TestUUID.cc
Tests/Unit/Util/: Environ.c  Environ.h  TemporaryDirectory.h
b-buck/buck/: buckfile.py  plugin.py  target.py  targetpath.py
b-buck/plugins/: cxx_plugin.py
cmake/: Util.cmake
doc/: Competitors.html  Distributed-Design.md  Protocol.md
ex/1/: main.cc
example/: Example.c  Example2.c
haskell/: Makefile  b.cabal
haskell/B/Foreign/: Answer.hs  BuildContext.hs  Database.hs  DatabaseInMemory.hs  Exception.hs  FileQuestion.hs  FileRule.hs  Question.hs  QuestionVTableList.hs  Rule.hs  Serialize.hs  UUID.hs
haskell/example/: Example.hs
include/B/: Alloc.h  AnswerContext.h  Assert.h  Base.h  ByteOrder.h  CXX.h  Config.h  Database.h  DependencyDelegate.h  Deserialize.h  Errno.h  Error.h  File.h  FilePath.h  Log.h  Macro.h  Main.h  Misc.h  Process.h  QuestionAnswer.h  QuestionDispatch.h  QuestionQueue.h  QuestionVTableSet.h  Queue.h  RefCount.h  Serialize.h  Thread.h  UUID.h
include/B/PBX/: PBXParser.h  PBXProjectFile.h  PBXScanner.h
include/B/Private/: Misc.h  OS.h  Queue.h  RefCount.h  SQLite3.h  Thread.h
lib/: Allocate.h  Answer.h  Broker.c  Broker.h  BuildContext.c  BuildContext.h  Client.c  Client.h  Database.c  Database.h  DatabaseInMemory.cc  DatabaseInMemory.h  Exception.c  Exception.cc  Exception.h  FileQuestion.c  FileQuestion.h  FileRule.c  FileRule.h  Identity.c  Identity.h  Log.c  MessageListInternal.c  Portable.c  Portable.h  Protocol.c  Question.h  QuestionVTableList.c  QuestionVTableList.h  Rule.c  Rule.h  RuleMap.h  RuleQueryList.c  RuleQueryList.h  Serialize.c  Serialize.h  UUID.c  UUID.h  Util.c  Util.h  (+5 more)
lib/include/B/: Answer.h  Broker.h  BuildContext.h  Client.h  Common.h  (+16 more)
lib/src/: Answer.c  Broker.c  BuildContext.c  Client.c  Database.c  DatabaseInMemory.cc  Exception.c  Exception.cc  ExceptionAggregate.cc  ExceptionCXX.cc  ExceptionErrno.c  ExceptionMemory.c  ExceptionString.c  Fiber.c  FileQuestion.c  FileRule.c  Identity.c  Log.c  MessageListInternal.c  Portable.c  Protocol.c  Question.c  QuestionVTableList.c  Rule.c  RuleQueryList.c  Serialize.c  UUID.c  Util.c  Worker.c  ZMQ.c
python/: b.py  example.py  test.py
python/b/: abc.py  abc2.py  abc3.py  answercontext.py  buildcontext.py  bytesink.py  bytesource.py  callbacks.py  database.py  databaseinmemory.py  easy.py  exception.py  file.py  filequestion.py  filerule.py  gen.py  internal.py  long.py  main.py  native.py  nativefile.py  object.py  process.py  question.py  questiondispatch.py  questionqueue.py  rule.py  support.py  uuid.py
scripts/: RunTest.sh
src/: Alloc.c  AnswerContext.c  Assert.c  Database.c  Deserialize.c  Error.c  Error_cxx.cc  File.c  File.cc  FilePath.c  Log.c  Main.c  Misc.c  OS.c  Process-kqueue.c  Process.c  QuestionAnswer.c  QuestionDispatch.c  QuestionQueue.c  QuestionQueue.cc  QuestionQueueRoot.c  QuestionVTableSet.c  RefCount.c  SQLite3.c  Serialize.c  Thread.c  UUID.c
src/PBX/: PBXParser.cc  PBXProjectFile.cc  PBXScanner.c
test/: Mocks.h  TestAnswerContext.cc  TestBroker.cc  TestClient.cc  TestException.cc  TestFiber.cc  TestMisc.cc  TestProcess.cc  TestUUID.cc
test/gtest/: Mocks.cc  Mocks.h  TestAlloc.cc  TestAnswerContext.cc  TestDeserialize.cc  TestErrorHandler.cc  TestFile.cc  TestMain.cc  TestMisc.cc  TestProcess.cc  TestProcessChild.c  TestQuestionDispatch.cc  TestQuestionQueue.cc  TestSerialize.cc  TestUUID.cc  Util.h
(+56 files in other folders)
